<resources>
	<string name="app_name">91彩票</string>
	<string name="shuangseqiu">双色球</string>
	<string name="fucai3d">福彩3D</string>
	<string name="qilecai">七乐彩</string>
	<string name="daletou">超级大乐透</string>
	<string name="pailie3">排列三</string>
	<string name="quit">退出</string>
	<string name="login_register">登录/注册</string>
	<string name="logout">注销</string>
	<string name="welcome">欢迎使用</string>
	<string name="login">登录</string>
	<string name="cancel">取消</string>
	<string name="str_return">返回</string>
	<string name="kaijianggonggao">开奖</string>
	<string name="goucaitouzhu">购彩</string>
	<string name="zhanghuchongzhi">充值</string>
	<string name="zhuanjiafenxi">荐号</string>
	<string name="ruyizhushou">如意助手</string>
	<string name="ruyitaocan">如意套餐</string>
	<string name="xingyunxuanhao">幸运选号</string>
	<string name="ruyichuangqing">如意传情</string>
	<string name="yonghuzhongxin">用户中心</string>
	<string name="tesetouzhu">特色投注</string>
	<string name="chaxunxinxi">查询信息</string>
	<string name="zhanghuguanli">账户管理</string>
	<string name="gongsijianjie">公司简介</string>
	<string name="gengduo">更多</string>
	<string name="ok">确定</string>
	<string name="danshi">"  "单式</string>
	<string name="fushi">"  "复式</string>
	<string name="dantuo">胆拖</string>
	<string name="twoin12">12选2</string>
	<string name="jixuan">"  "机选</string>
	<string name="touzhu">投注</string>
	<string name="zhixuan">直选</string>
	<string name="zuxuan3">组3</string>
	<string name="zuxuan6">组6</string>
	<string name="hezhi">和值</string>
	<string name="zu6">单/复式</string>
	<string name="danma">胆码(1~2)</string>
	<string name="tuoma">拖码(1~9)</string>
	<string name="baiwei">百位</string>
	<string name="shiwei">十位</string>
	<string name="gewei">个位</string>
	<string name="hezhi_zhixuan">和值-直选</string>
	<string name="hezhi_zu3">和值-组3</string>
	<string name="hezhi_zu6">和值-组6</string>
	<string name="choose_zhixuan_title">请选择小球个数</string>
	<string name="zhixuan_danshi_dialog_tips">当前玩法为直选单式</string>
	<string name="zhixuan_fushi_dialog_tips">当前玩法为直选复式</string>
	<string name="zu3_fushi_dialog_tips">当前玩法为组3复式</string>
	<string name="zu6_danshi_dialog_tips">当前玩法为组6单式</string>
	<string name="zu6_fushi_dialog_tips">当前玩法为组6复式</string>
	<string name="zhixuanhezhi_dialog_tips">当前玩法为和值直选</string>
	<string name="zu3hezhi_dialog_tips">当前玩法为和值组3</string>
	<string name="zu6hezhi_dialog_tips">当前玩法为和值组6</string>
	<string name="dantuo_danma_dialog_tips">请选择1~2位胆码</string>
	<string name="dantuo_tuoma_dialog_tips">请选择1~9位拖码</string>
	<string name="dantuo_dialog_tips">胆码和拖码的小球不少于3个</string>
	<string name="please_choose_number">请选择号码</string>
	<string name="please_choose_red_number">请选择红球号码</string>
	<string name="please_choose_blue_number">请选择蓝球号码</string>
	<string name="red_ball_field">红球区</string>
	<string name="blue_ball_field">蓝球区</string>
	<string name="red_ball_danma">红球胆码区(请选择1-5个号码)</string>
	<string name="red_ball_tuoma">红色拖码区(请选择2-20个号码)</string>
	<string name="table_ball_danma">胆码区(请选择1-6个号码)</string>
	<string name="table_ball_tuoma">拖码区</string>
	<string name="front_field">前区</string>
	<string name="rear_field">后区</string>
	<string name="front_ball_danma">前区胆码</string>
	<string name="front_ball_tuoma">前区拖码</string>
	<string name="rear_ball_danma">后区胆码</string>
	<string name="rear_ball_tuoma">后区拖码</string>
	<string name="please_choose_red_number_dlt">请选择前区号码</string>
	<string name="please_choose_blue_number_dlt">请选择后区号码</string>
	<string name="blue_ball_dantuo">蓝球区(1-16个)</string>
	<string name="toggle_on">"  "机选</string>
	<string name="toggle_off">"  "自选</string>
	<string name="choose_number_dialog_title_fushi">请选择复式小球个数</string>
	<string name="choose_number_dialog_tip1">当前小球数为单式玩法</string>
	<string name="choose_number_dialog_tip2">当前玩法为红复式</string>
	<string name="choose_number_dialog_tip3">当前玩法为蓝复式</string>
	<string name="choose_number_dialog_tip4">当前玩法为全复式</string>
	<string name="choose_number_dialog_title_dantuo">请选择胆拖小球个数</string>
	<string name="choose_number_dialog_tip5">请选择红球胆码、拖码</string>
	<string name="choose_number_dialog_tip6">请选择蓝球</string>
	<string name="choose_number_dialog_tip7">当前玩法为单式</string>
	<string name="choose_number_dialog_tip8">当前玩法为复式</string>
	<string name="choose_number_dialog_tip9">请选择前区胆码、拖码和后区胆码、拖码</string>
	<string name="choose_number_dialog_tip10">请选择前区胆码、拖码</string>
	<string name="choose_number_dialog_tip11">请选择后区胆码、拖码</string>
	<string name="choose_number_dialog_tip2_dlt">当前玩法为前区复式</string>
	<string name="choose_number_dialog_tip3_dlt">当前玩法为后区复式</string>
	<string name="choose_number_dialog_tip4_dlt">当前玩法为全复式</string>
	<string name="zhuijia_touzhu">"  "追加投注</string>
	<string name="meiqibeishu">每期倍数</string>
	<string name="zhuihaoqishu">追号期数</string>
	<string name="zuida50bei">（最大50倍）</string>
	<string name="zuida99bei">（最大99倍）</string>
	<string name="zuiduo99qi">（最多99期）</string>
	<string name="please_input_red_ball_num">请选择红球个数：</string>
	<string name="please_input_blue_ball_num">请选择蓝球个数：</string>
	<string name="user_login">用户登录</string>
	<string name="login_phoneNumber">手机号:</string>
	<string name="login_password">密码:</string>
	<string name="loginTitle">请登录</string>
	<string name="login_dialog_ok">确定</string>
	<string name="login_dialog_cancel">取消</string>
	<string name="remember_phoneNum">记住手机号</string>
	<string name="remember_password">记住密码</string>
	<string name="regNewUser">注册新用户</string>
	<string name="please_enter_phone_number">请输入手机号</string>
	<string name="please_remember_pwd">请输入密码</string>
	<string name="reg_new_user">注册新用户</string>
	<string name="forget_password">忘记密码</string>
	<string name="register">注册</string>
	<string name="register_login_phoneNumber">手机号:</string>
	<string name="register_login_password">密　码:</string>
	<string name="register_confirm_password">确认 密码:</string>
	<string name="register_id_num">身份证号码:</string>
	<string name="register_refer_info_1">91彩票服务协议请参阅</string>
	<string name="register_refer_info_2">http://www.ruyicai.com/ruyicai/web/help/xieyi.jsp
	</string>
	<string name="giveCall">立即拨打</string>
	<string name="return_button">返回</string>
	<string name="forget_password_hint">请您拨打客服电话，客服人员会帮您找回密码，点击”立即拨打“会自动语音连线，
		客服电话：400-6651-000</string>
	<string name="register_free_info">请务必如实输入，身份证作为提现依据，身份证号码一旦提交不可修改：</string>
	<string name="no_connection">连接失败！</string>
	<string name="no_connection_title">连接失败</string>
	<string name="settings">设置</string>
	<string name="connect_hint">允许应用程序连接网络</string>
	<string name="tishi">提示</string>
	<string name="go_on">继续</string>
	<string name="no_hint">不再提示</string>
	<string name="back_to_login">返回</string>
	<string name="register_return">返回</string>
	<string name="phone_cards_recharge">手机话费充值卡</string>
	<string name="phone_bank_cards_recharge">手机银行充值</string>
	<string name="zhfb_cards_recharge">支付宝充值</string>
	<string name="bank_cards_recharge">银行卡电话充值</string>
	<string name="game_cards_recharge">游戏点卡充值</string>
	<string name="other_recharge">其它充值</string>
	<string name="phone_card_please_entrCardInfo">请输入充值卡信息：</string>
	<string name="phone_card_enter_CInfo">充值卡序列号：</string>
	<string name="phone_card_CPassword">充值卡密码：</string>
	<string name="phone_card_CValue">请输入充值卡面值：</string>
	<string name="phone_card_hint"> 提示：请选择与您充值卡面额相同的金额，充值卡内的金额将一次性金额扣除；如果您选择的充值
		金额与您的实际面额不符，将无法给你退还差额及损失部分。
		手续费4%。</string>
	<string name="phone_card_select_recharge_card_type">选择一个充值卡类型</string>
	<string name="phone_card_select_recharge_card_value">选择一个充值卡面值</string>
	<string name="phone_bank_select_bank">请选择银行：</string>
	<string name="phone_bank_select_dialog_bank">选择银行：</string>
	<string name="phone_bank_enter_value">请输入充值金额（整数）：</string>
	<string name="phone_bank_hint">提示:以上银行充值前需开通网银业务。</string>
	<string name="phone_banke_select_bank_type">选择一种银行卡类型</string>
	<string name="ZFB_please_enter_value">请输入您的充值金额(整数):</string>
	<string name="ZFB_relate_phoneNum">支付宝账号(手机或邮箱): </string>
	<string name="ZFB_hint"> 提示: 1.支付前,请您确认您已是支付宝会员,如您还没有支付宝账户,请登录
		www.alipay.com支付宝网站注册
		2.手机支付宝将通过WAP方式从您的支付宝账户扣款完成支付
		3.手机支付宝支付金额每日最高500元
		4.支付宝客服热线：0571-88156688</string>
	<string name="bank_card_phone_enter_rechargeInfo">请输入充值信息 </string>
	<string name="bank_card_phone_recharge_value">充值金额(20元以上整数金额 )：</string>
	<string name="bank_card_phone_yuan">元(最低20元)</string>
	<string name="bank_card_phone_recharge_cardNum">充值卡号</string>
	<string name="bank_card_phone_phoneNum">手机号码：</string>
	<string name="bank_card_phone_text_moneny">充值金额：</string>
	<string name="bank_card_phone_import_hint">(确保接听银联电话,请填真实号码)\n提示：\n使用电话银行，账户认证需要一段时间，请耐心等待银联02096585的来电，并按照语音提示操作；中国银联采用卡密分离核心专利技术，彻底保障用户交易安全！\n银联客服热线：400-657-7577
	</string>
	<string name="bank_card_phone_dialog_import_hint">(确保接听银联电话,请填真实号码)\n提示：\n第一次使用电话银行，账户认证需要一段时间，请耐心等待银联02096585的来电，并按照语音提示操作；中国银联采用卡密分离核心专利技术，彻底保障用户交易安全！\n银联客服热线：400-657-7577
	</string>
	<string name="bank_card_phone_no_rechargeInfo">尊敬的客户，由于银联卡与个人信息的关联性较强，必须完善个人资料才能进行充值。
	</string>
	<string name="bank_card_phone_user_name">请输入真实姓名:</string>
	<string name="bank_card_phone_user_idnum">请输入身份证号:</string>
	<string name="bank_card_phone_open_bank">请输入开户银行所在地:</string>
	<string name="bank_card_phone_open_bankuser_address">请输入开户人证件所在地:</string>
	<string name="bank_card_phone_bankid">银行卡号：</string>
	<string name="bank_card_phone_name">开卡人姓名：</string>
	<string name="bank_card_phone_idcard">开卡人身份证：</string>
	<string name="bank_card_phone_home">身份证户籍所在地：</string>
	<string name="bank_card_phone_province">银行卡开户省份：</string>
	<string name="bank_card_phone_city">银行卡开户城市：</string>
	<string name="bank_card_phone_num">手机号码：</string>
	<string name="bank_card_phone_alert1">(浙江山东天津农行暂停充值,仅支持以上银行的借
		记卡）
    </string>
	<string name="bank_card_phone_alert2">(山东省青岛市XX街XX路XX号)</string>
	<string name="game_card_type">点卡类型：</string>
	<string name="game_card_number">卡"  "号：</string>
	<string name="game_card_password">密"  "码：</string>
	<string name="game_card_recharge_value">充值金额：</string>
	<string name="game_card_total_value">面值总额：</string>
	<string name="game_card_yuan">元</string>
	<string name="game_card_hint">提示:骏网一卡通手续费18%,征途游戏卡和盛大游戏卡手续费20%；</string>
	<string name="game_card_select_type">选择一种点卡类型</string>
	<string name="other_recharge_select">请选择：</string>
	<string name="other_recharge_ComNetWork_recharge">电脑网上充值 </string>
	<string name="other_recharge_phoneWAP_network">手机WAP网站</string>
	<string name="other_recharge_RYC_card">91彩票充值卡充值</string>
	<string name="other_recharge_hint"> 提示： 91彩票充值卡充值便捷，无手续费。</string>
	<string name="computer_net_recharge_hint">请使用电脑登录www.ruyicai.com，凭注册用户名和密码登录后充值，充值成功后请返回手机投注区重新登录后购买彩票！谢谢！
	</string>
	<string name="computer_net_recharge">电脑网上充值</string>
	<string name="phone_WAP_recharge_hint">请使用手机登录wap.ruyici.com，凭注册用户名和密码登陆后充值，充值成功后请返回手机投注区重新登陆后购买彩票！谢谢！
	</string>
	<string name="phone_WAP_recharge">手机话费充值卡</string>
	<string name="ruyihelper_gameIntroduction">玩法介绍</string>
	<string name="ruyihelper_operationAssistant">操作助手</string>
	<string name="ruyihelper_frequentQuestion">常见问题</string>
	<string name="ruyihelper_goucailiucheng">购彩流程</string>
	<string name="usercenter_accountDetails">账户明细</string>
	<string name="usercenter_upPage">上一页</string>
	<string name="usercenter_downPage">下一页</string>
	<string name="usercenter_accountDetails_all">全部</string>
	<string name="usercenter_accountDetails_recharge">充值</string>
	<string name="usercenter_accountDetails_pay">支付</string>
	<string name="usercenter_accountDetails_awardSchool">奖派</string>
	<string name="usercenter_accountDetails_withdraw">提现</string>
	<string name="reselect_num">重新选号 </string>
	<string name="game_introduction">玩法介绍 </string>
	<string name="get_money_name">持卡人名:</string>
	<string name="get_money_bank">开卡银行:</string>
	<string name="get_money_bank_start">开卡地址:</string>
	<string name="get_money_bank_num">银行卡号:</string>
	<string name="get_money_money">提现金额:</string>
	<string name="get_money_alert">提示：银行卡提现按照提现金额的1%收取手续费，手续费最低2元。五个工作日内到帐。如七个工作日未收到提现款项，请及时与我们客服人员联系，可直接拨010-88860239或400-665-1000。您可在提现申请通过审核之前修改或取消提现操作
	</string>
	<string name="get_money_bank_type">请选择银行</string>
</resources>