<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:padding="10dip">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/bank_card_phone_no_rechargeInfo"
				android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/bank_card_phone_text_moneny"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />
				<EditText android:id="@+id/bank_card_phone_recharge_value"
					android:layout_height="wrap_content" android:layout_width="100dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:layout_weight="1"
					android:numeric="integer" android:gravity="fill_horizontal"
					android:textAppearance="?android:attr/textAppearanceMedium" />
				<TextView android:layout_height="wrap_content" android:textSize="15dp"
					android:layout_width="wrap_content" android:text="@string/bank_card_phone_yuan"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<!--
				<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
				android:text="@string/phone_bank_cards_recharge"
				android:gravity="left"
				android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip" android:scrollHorizontally="true"
				android:autoText="false" android:capitalize="none"
				android:gravity="fill_horizontal" android:password="true"
				android:textAppearance="?android:attr/textAppearanceMedium" />
			-->
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/phone_bank_select_dialog_bank"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium"
					android:paddingTop="10px" />
				<Spinner android:id="@+id/Spinner01" android:layout_height="wrap_content"
					android:layout_width="180dip" android:entries="@array/brank_card_phone_type"></Spinner>
			</LinearLayout>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/bank_card_phone_alert1"
				android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_bankid"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_bankid"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:numeric="integer" android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_name"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_name"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_idcard"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_idcard"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:numeric="integer" android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_home"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_home"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/bank_card_phone_alert2"
				android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_province"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_province"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_city"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_city"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_height="wrap_content"
					android:layout_width="90px" android:text="@string/bank_card_phone_num"
					android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText android:id="@+id/bank_card_phone_phone_num"
					android:layout_height="wrap_content" android:layout_width="180dip"
					android:scrollHorizontally="true" android:autoText="false"
					android:capitalize="none" android:gravity="fill_horizontal"
					android:numeric="integer" android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>

			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/bank_card_phone_dialog_import_hint"
				android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>

